2008-04-11  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* configure.in:
	  Idea about the tracing. Not that practical as it is.

	* gtkdoc-mkdb.in:
	* gtkdoc-mktmpl.in:
	  Unify file-error messages. Improve warning detail. Fix undocumented
	  status for template less runs.

2008-04-10  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Ideas.

	* gtkdoc-common.pl.in:
	  Add common method for prining (gcc-style) warnings.

	* gtkdoc-mkdb.in:
	  Use new method. Harmonize the warnings a bit. Remember locations
	  symbols are taken from template files for use in warnings.

2008-04-09  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
          Some releasing info.

	* gtkdoc-mkdb.in:
	  Print file/line number in warning.

	* help/manual/C/gtk-doc-manual.xml:
	  Some docs for what the <module>-overrides.txt file is for.

2008-03-23  Stefan Kost  <ensonic@users.sf.net>

	* autogen.sh:
	  Tell automake to not warn us about portabillity issues. Its too late
	  for that.

	* ChangeLog:
	  Surgery for the bugnumber.

2008-03-21  Marc-Andre Lureau <marcandre.lureau@gmail.com>

	* .svnignore, Makefile.am, autogen.sh, configure.in,
	help/manual/.svnignore, help/manual/C/ChangeLog,
	help/manual/C/Makefile.am, help/manual/C/gtk-doc-manual-C.omf.in,
	help/manual/C/gtk-doc-manual.xml, help/manual/ChangeLog,
	help/manual/Makefile.am, help/manual/gtk-doc-manual.omf.in,
	m4/.svnignore, omf.make, xmldocs.make:
	GNOME doc-utils migration.  Fixes #335239

2008-03-22  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	* configure.in:
	* help/manual/C/gtk-doc-manual.xml:
	  Back to development.

=== Release 1.10 ===

2008-03-19  Stefan Kost  <ensonic@users.sf.net>

	* NEWS:
	* HACKING:
	  Prepare for release.

	* style.css:
	  Add fix for footnote positions.

2008-02-27  Stefan Kost  <ensonic@users.sf.net>

	patch by: Carlos Garnacho <carlos@imendio.com>

	* tools/gtk-doc.el:
	  Update emacs mode to work with emacs22. Fixes #513318.

2008-02-01  Stefan Kost  <ensonic@users.sf.net>
