@@ -1,3 +1,9 @@
+2008-04-17  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtkdoc-mkdb.in:
+	  Add one more warning. Also trac location of section docs. Merge
+	  source symbols once and then on demand (if we read a template).
+
 2008-04-11  Stefan Kost  <ensonic@users.sf.net>
 
 	* TODO:
